--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,3 @@
-# Cloudflare Pages configuration
 name = "star-point-quiz-time"
-
-[build]
-command = "npm ci && npm run build"
-cwd = ""
-
-[build.environment_variables]
-NODE_VERSION = "22"
+compatibility_date = "2024-01-01"
+pages_build_output_dir = "dist"
